# blockblast

./: .gitignore  package-lock.json  package.json
.playwright-mcp/: page-2026-04-13T19-33-10-324Z.yml  page-2026-04-13T19-34-23-459Z.yml  page-2026-04-13T19-34-44-236Z.yml  page-2026-04-13T19-35-30-472Z.yml  page-2026-04-13T19-36-23-263Z.yml  page-2026-04-13T19-44-09-990Z.yml  page-2026-04-13T19-52-02-426Z.yml  page-2026-04-13T20-04-20-437Z.yml  page-2026-04-13T20-16-22-222Z.yml  page-2026-04-13T20-17-05-655Z.yml  page-2026-04-13T20-19-17-694Z.yml  page-2026-04-13T20-31-54-467Z.yml  page-2026-04-13T20-32-29-826Z.yml  page-2026-04-13T20-32-44-550Z.yml
app/: globals.css  layout.tsx  page.tsx
components/: BlockBlastGame.tsx  GameBoard.tsx  GameOverOverlay.tsx  PieceTray.tsx  ScoreDisplay.tsx
docs/: dqn-training-writeup.md
docs/superpowers/plans/: 2026-04-13-agent-training.md  2026-04-13-block-blast-game.md  2026-04-13-gymnasium-env.md  (+1 more)
lib/: sounds.ts
lib/engine/: board.ts  game.ts  pieces.ts  scoring.ts  types.ts
training/: pyproject.toml
training/agent/: dqn.py  model.py  replay_buffer.py
training/blockblast_training.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
training/configs/: default.yaml  hole_penalty_5.yaml  tier1.yaml  tier2.yaml  tier3.yaml  tier4_c51.yaml
training/env/: __init__.py  action_masking.py  block_blast_env.py  board.py  game.py  pieces.py  scoring.py  types.py
training/scripts/: demo_search.py  eval.py  replay_demo.py  serve.py  train.py
training/tests/: test_agent.py  test_env.py  test_parity.py
(+3 files in other folders)
